--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "firebase": "9.6.6",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.4",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^5.11.2",
     "redux": "4.1.2",
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
